   way as DirectSpellChecker. This can be used to merge top-N results from more than one
   SpellChecker.  (James Dyer via Robert Muir)

 * LUCENE-3496: Support grouping by DocValues. (Martijn van Groningen)

 * LUCENE-3602: Added query time joining under the join module. (Martijn van Groningen, Michael McCandless)

API Changes

 * LUCENE-2606: Changed RegexCapabilities interface to fix thread 
   safety, serialization, and performance problems. If you have
   written a custom RegexCapabilities it will need to be updated
   to the new API.  (Robert Muir, Uwe Schindler)

 * LUCENE-2638 MakeHighFreqTerms.TermStats public to make it more useful
   for API use. (Andrzej Bialecki)

 * LUCENE-2912: The field-specific hashmaps in SweetSpotSimilarity were removed.
   Instead, use SimilarityProvider to return different SweetSpotSimilaritys
   for different fields, this way all parameters (such as TF factors) can be 
   customized on a per-field basis.  (Robert Muir)

 * LUCENE-3308: DuplicateFilter keepMode and processingMode have been converted to
   enums DuplicateFilter.KeepMode and DuplicateFilter.ProcessingMode repsectively.

 * LUCENE-3483: Move Function grouping collectors from Solr to grouping module.
   (Martijn van Groningen)
   
 * LUCENE-3606: FieldNormModifier was deprecated, because IndexReader's
   setNorm() was deprecated. Furthermore, this class is broken, as it does
   not take position overlaps into account while recalculating norms.
   (Uwe Schindler, Robert Muir)

Bug Fixes

 * LUCENE-3045: fixed QueryNodeImpl.containsTag(String key) that was
   not lowercasing the key before checking for the tag (Adriano Crestani)

Optimizations

* LUCENE-3468: Replaced last() and remove() with pollLast() in
             FirstPassGroupingCollector (Martijn van Groningen)

======================= Lucene 3.6.0 ================

Changes in backwards compatibility policy

 * LUCENE-3626: The internal implementation classes in PKIndexSplitter