@@ -114,23 +114,41 @@ name|lucene
 operator|.
 name|store
 operator|.
-name|NativeFSLockFactory
+name|IOContext
+operator|.
+name|Context
 import|;
 end_import
 begin_comment
-comment|// javadoc
+comment|// TODO
 end_comment
 begin_comment
-comment|/**  * An {@link Directory} implementation that uses the  * Linux-specific O_DIRECT flag to bypass all OS level  * caching.  To use this you must compile  * NativePosixUtil.cpp (exposes Linux-specific APIs through  * JNI) for your platform.  *  *<p><b>WARNING</b>: this code is very new and quite easily  * could contain horrible bugs.  For example, here's one  * known issue: if you use seek in IndexOutput, and then  * write more than one buffer's worth of bytes, then the  * file will be wrong.  Lucene does not do this (only writes  * small number of bytes after seek).   * @lucene.experimental  */
+comment|//   - newer Linux kernel versions (after 2.6.29) have
+end_comment
+begin_comment
+comment|//     improved MADV_SEQUENTIAL (and hopefully also
+end_comment
+begin_comment
+comment|//     FADV_SEQUENTIAL) interaction with the buffer
+end_comment
+begin_comment
+comment|//     cache; we should explore using that instead of direct
+end_comment
+begin_comment
+comment|//     IO when context is merge
+end_comment
+begin_comment
+comment|/**  * A {@link Directory} implementation for all Unixes that uses  * DIRECT I/O to bypass OS level IO caching during  * merging.  For all other cases (searching, writing) we delegate  * to the provided Directory instance.  *  *<p>See<a  * href="../../../../../contrib-misc/overview-summary.html#NativeUnixDirectory">Overview</a>  * for more details.  *  *<p>To use this you must compile  * NativePosixUtil.cpp (exposes Linux-specific APIs through  * JNI) for your platform, by running<code>ant  * build-native-unix</code>, and then putting the resulting  *<code>libNativePosixUtil.so</code> (from  *<code>lucene/build/native</code>) onto your dynamic  * linker search path.  *  *<p><b>WARNING</b>: this code is very new and quite easily  * could contain horrible bugs.  For example, here's one  * known issue: if you use seek in<code>IndexOutput</code>, and then  * write more than one buffer's worth of bytes, then the  * file will be wrong.  Lucene does not do this today (only writes  * small number of bytes after seek), but that may change.  *  *<p>This directory passes Solr and Lucene tests on Linux  * and OS X; other Unixes should work but have not been  * tested!  Use at your own risk.  *  * @lucene.experimental  */
 end_comment
 begin_class
-DECL|class|DirectIOLinuxDirectory
+DECL|class|NativeUnixDirectory
 specifier|public
 class|class
-name|DirectIOLinuxDirectory
+name|NativeUnixDirectory
 extends|extends
 name|FSDirectory
 block|{
+comment|// TODO: this is OS dependent, but likely 512 is the LCD
 DECL|field|ALIGN
 specifier|private
 specifier|final
@@ -154,25 +172,64 @@ operator|-
 literal|1
 operator|)
 decl_stmt|;
-DECL|field|forcedBufferSize
+comment|/** Default buffer size before writing to disk (256 MB);    *  larger means less IO load but more RAM and direct    *  buffer storage space consumed during merging. */
+DECL|field|DEFAULT_MERGE_BUFFER_SIZE
+specifier|public
+specifier|final
+specifier|static
+name|int
+name|DEFAULT_MERGE_BUFFER_SIZE
+init|=
+literal|262144
+decl_stmt|;
+comment|/** Default min expected merge size before direct IO is    *  used (10 MB): */
+DECL|field|DEFAULT_MIN_BYTES_DIRECT
+specifier|public
+specifier|final
+specifier|static
+name|long
+name|DEFAULT_MIN_BYTES_DIRECT
+init|=
+literal|10
+operator|*
+literal|1024
+operator|*
+literal|1024
+decl_stmt|;
+DECL|field|mergeBufferSize
 specifier|private
 specifier|final
 name|int
-name|forcedBufferSize
+name|mergeBufferSize
 decl_stmt|;
-comment|/** Create a new NIOFSDirectory for the named location.    *     * @param path the path of the directory    * @param lockFactory the lock factory to use, or null for the default    * ({@link NativeFSLockFactory});    * @param forcedBufferSize if this is 0, just use Lucene's    *    default buffer size; else, force this buffer size.    *    For best performance, force the buffer size to    *    something fairly large (eg 1 MB), but note that this    *    will eat up the JRE's direct buffer storage space    * @throws IOException    */
-DECL|method|DirectIOLinuxDirectory
+DECL|field|minBytesDirect
+specifier|private
+specifier|final
+name|long
+name|minBytesDirect
+decl_stmt|;
+DECL|field|delegate
+specifier|private
+specifier|final
+name|Directory
+name|delegate
+decl_stmt|;
+comment|/** Create a new NIOFSDirectory for the named location.    *     * @param path the path of the directory    * @param mergeBufferSize Size of buffer to use for    *    merging.  See {@link #DEFAULT_MERGE_BUFFER_SIZE}.    * @param minBytesDirect Merges, or files to be opened for    *   reading, smaller than this will    *   not use direct IO.  See {@link    *   #DEFAULT_MIN_BYTES_DIRECT}    * @param delegate fallback Directory for non-merges    * @throws IOException    */
+DECL|method|NativeUnixDirectory
 specifier|public
-name|DirectIOLinuxDirectory
+name|NativeUnixDirectory
 parameter_list|(
 name|File
 name|path
 parameter_list|,
-name|LockFactory
-name|lockFactory
-parameter_list|,
 name|int
-name|forcedBufferSize
+name|mergeBufferSize
+parameter_list|,
+name|long
+name|minBytesDirect
+parameter_list|,
+name|Directory
+name|delegate
 parameter_list|)
 throws|throws
 name|IOException
@@ -181,14 +238,82 @@ name|super
 argument_list|(
 name|path
 argument_list|,
-name|lockFactory
+name|delegate
+operator|.
+name|getLockFactory
+argument_list|()
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|mergeBufferSize
+operator|&
+name|ALIGN
+operator|)
+operator|!=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"mergeBufferSize must be 0 mod "
+operator|+
+name|ALIGN
+operator|+
+literal|" (got: "
+operator|+
+name|mergeBufferSize
+operator|+
+literal|")"
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|mergeBufferSize
+operator|=
+name|mergeBufferSize
 expr_stmt|;
 name|this
 operator|.
-name|forcedBufferSize
+name|minBytesDirect
 operator|=
-name|forcedBufferSize
+name|minBytesDirect
+expr_stmt|;
+name|this
+operator|.
+name|delegate
+operator|=
+name|delegate
+expr_stmt|;
+block|}
+comment|/** Create a new NIOFSDirectory for the named location.    *     * @param path the path of the directory    * @param delegate fallback Directory for non-merges    * @throws IOException    */
+DECL|method|NativeUnixDirectory
+specifier|public
+name|NativeUnixDirectory
+parameter_list|(
+name|File
+name|path
+parameter_list|,
+name|Directory
+name|delegate
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|path
+argument_list|,
+name|DEFAULT_MERGE_BUFFER_SIZE
+argument_list|,
+name|DEFAULT_MIN_BYTES_DIRECT
+argument_list|,
+name|delegate
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -210,9 +335,48 @@ block|{
 name|ensureOpen
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|context
+operator|.
+name|context
+operator|!=
+name|Context
+operator|.
+name|MERGE
+operator|||
+name|context
+operator|.
+name|mergeInfo
+operator|.
+name|estimatedMergeBytes
+operator|<
+name|minBytesDirect
+operator|||
+name|fileLength
+argument_list|(
+name|name
+argument_list|)
+operator|<
+name|minBytesDirect
+condition|)
+block|{
+return|return
+name|delegate
+operator|.
+name|openInput
+argument_list|(
+name|name
+argument_list|,
+name|context
+argument_list|)
+return|;
+block|}
+else|else
+block|{
 return|return
 operator|new
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 argument_list|(
 operator|new
 name|File
@@ -223,12 +387,10 @@ argument_list|,
 name|name
 argument_list|)
 argument_list|,
-name|bufferSize
-argument_list|(
-name|context
-argument_list|)
+name|mergeBufferSize
 argument_list|)
 return|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -249,6 +411,38 @@ block|{
 name|ensureOpen
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|context
+operator|.
+name|context
+operator|!=
+name|Context
+operator|.
+name|MERGE
+operator|||
+name|context
+operator|.
+name|mergeInfo
+operator|.
+name|estimatedMergeBytes
+operator|<
+name|minBytesDirect
+condition|)
+block|{
+return|return
+name|delegate
+operator|.
+name|createOutput
+argument_list|(
+name|name
+argument_list|,
+name|context
+argument_list|)
+return|;
+block|}
+else|else
+block|{
 name|ensureCanWrite
 argument_list|(
 name|name
@@ -256,7 +450,7 @@ argument_list|)
 expr_stmt|;
 return|return
 operator|new
-name|DirectIOLinuxIndexOutput
+name|NativeUnixIndexOutput
 argument_list|(
 operator|new
 name|File
@@ -267,43 +461,17 @@ argument_list|,
 name|name
 argument_list|)
 argument_list|,
-name|bufferSize
-argument_list|(
-name|context
-argument_list|)
+name|mergeBufferSize
 argument_list|)
 return|;
 block|}
-DECL|method|bufferSize
-specifier|private
-name|int
-name|bufferSize
-parameter_list|(
-name|IOContext
-name|context
-parameter_list|)
-block|{
-return|return
-name|forcedBufferSize
-operator|!=
-literal|0
-condition|?
-name|forcedBufferSize
-else|:
-name|BufferedIndexInput
-operator|.
-name|bufferSize
-argument_list|(
-name|context
-argument_list|)
-return|;
 block|}
-DECL|class|DirectIOLinuxIndexOutput
+DECL|class|NativeUnixIndexOutput
 specifier|private
 specifier|final
 specifier|static
 class|class
-name|DirectIOLinuxIndexOutput
+name|NativeUnixIndexOutput
 extends|extends
 name|IndexOutput
 block|{
@@ -352,9 +520,9 @@ specifier|private
 name|boolean
 name|isOpen
 decl_stmt|;
-DECL|method|DirectIOLinuxIndexOutput
+DECL|method|NativeUnixIndexOutput
 specifier|public
-name|DirectIOLinuxIndexOutput
+name|NativeUnixIndexOutput
 parameter_list|(
 name|File
 name|path
@@ -366,6 +534,7 @@ throws|throws
 name|IOException
 block|{
 comment|//this.path = path;
+specifier|final
 name|FileDescriptor
 name|fd
 init|=
@@ -842,6 +1011,8 @@ name|IOException
 block|{
 return|return
 name|fileLength
+operator|+
+name|bufferPos
 return|;
 block|}
 annotation|@
@@ -907,12 +1078,12 @@ block|}
 block|}
 block|}
 block|}
-DECL|class|DirectIOLinuxIndexInput
+DECL|class|NativeUnixIndexInput
 specifier|private
 specifier|final
 specifier|static
 class|class
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 extends|extends
 name|IndexInput
 block|{
@@ -960,9 +1131,9 @@ specifier|private
 name|int
 name|bufferPos
 decl_stmt|;
-DECL|method|DirectIOLinuxIndexInput
+DECL|method|NativeUnixIndexInput
 specifier|public
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 parameter_list|(
 name|File
 name|path
@@ -973,10 +1144,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-comment|// TODO make use of IOContext
 name|super
 argument_list|(
-literal|"DirectIOLinuxIndexInput(path=\""
+literal|"NativeUnixIndexInput(path=\""
 operator|+
 name|path
 operator|.
@@ -986,6 +1156,7 @@ operator|+
 literal|"\")"
 argument_list|)
 expr_stmt|;
+specifier|final
 name|FileDescriptor
 name|fd
 init|=
@@ -1051,11 +1222,11 @@ expr_stmt|;
 comment|//System.out.println("D open " + path + " this=" + this);
 block|}
 comment|// for clone
-DECL|method|DirectIOLinuxIndexInput
+DECL|method|NativeUnixIndexInput
 specifier|public
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 parameter_list|(
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 name|other
 parameter_list|)
 throws|throws
@@ -1211,15 +1382,11 @@ name|pos
 operator|&
 name|ALIGN_NOT_MASK
 decl_stmt|;
-comment|//System.out.println("seek pos=" + pos + " aligned=" + alignedPos + " bufferSize=" + bufferSize + " this=" + this);
 name|filePos
 operator|=
 name|alignedPos
 operator|-
 name|bufferSize
-expr_stmt|;
-name|refill
-argument_list|()
 expr_stmt|;
 specifier|final
 name|int
@@ -1234,6 +1401,16 @@ operator|-
 name|alignedPos
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|delta
+operator|!=
+literal|0
+condition|)
+block|{
+name|refill
+argument_list|()
+expr_stmt|;
 name|buffer
 operator|.
 name|position
@@ -1245,6 +1422,15 @@ name|bufferPos
 operator|=
 name|delta
 expr_stmt|;
+block|}
+else|else
+block|{
+comment|// force refill on next read
+name|bufferPos
+operator|=
+name|bufferSize
+expr_stmt|;
+block|}
 block|}
 block|}
 annotation|@
@@ -1547,7 +1733,7 @@ try|try
 block|{
 return|return
 operator|new
-name|DirectIOLinuxIndexInput
+name|NativeUnixIndexInput
 argument_list|(
 name|this
 argument_list|)
